versioned_docs/version-2.16/reference/subsystems/black.mdx
---
title: black
description: |
  The Black Python code formatter (https://black.readthedocs.io/).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Black Python code formatter (https://black.readthedocs.io/).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[black]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--black-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_BLACK_ARGS'
  toml_repr={`[black]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Black, e.g. `--black-args='--target-version=py37 --quiet'`.

</Option>

### `skip`

<Option
  cli_repr={`--[no-]black-skip`}
  env_repr='PANTS_BLACK_SKIP'
  toml_repr={`[black]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Black when running `pants fmt` and `pants lint`.

</Option>

## Advanced options

### `config`

<Option
  cli_repr={`--black-config=<file_option>`}
  env_repr='PANTS_BLACK_CONFIG'
  toml_repr={`[black]
config = <file_option>`}
  default_repr={`None`}
>

Path to a TOML config file understood by Black (https://github.com/psf/black#configuration-format).

Setting this option will disable `[black].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]black-config-discovery`}
  env_repr='PANTS_BLACK_CONFIG_DISCOVERY'
  toml_repr={`[black]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include any relevant pyproject.toml config files during runs.

Use `[black].config` instead if your config is in a non-standard location.

</Option>

### `console_script`

<Option
  cli_repr={`--black-console-script=<str>`}
  env_repr='PANTS_BLACK_CONSOLE_SCRIPT'
  toml_repr={`[black]
console_script = <str>`}
  default_repr={`black`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--black-entry-point=<str>`}
  env_repr='PANTS_BLACK_ENTRY_POINT'
  toml_repr={`[black]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `install_from_resolve`

<Option
  cli_repr={`--black-install-from-resolve=<str>`}
  env_repr='PANTS_BLACK_INSTALL_FROM_RESOLVE'
  toml_repr={`[black]
install_from_resolve = <str>`}
  default_repr={`None`}
>

If specified, install the tool using the lockfile for this named resolve.

This resolve must be defined in [python].resolves, as described in https://www.pantsbuild.org/v2.16/docs/python-third-party-dependencies#user-lockfiles.

The resolve&#x27;s entire lockfile will be installed, unless specific requirements are listed via the `requirements` option, in which case only those requirements will be installed. This is useful if you don&#x27;t want to invalidate the tool&#x27;s outputs when the resolve incurs changes to unrelated requirements.

If unspecified, and the `lockfile` option is unset, the tool will be installed using the default lockfile shipped with Pants.

If unspecified, and the `lockfile` option is set, the tool will use the custom `black` &#x22;tool lockfile&#x22; generated from the `version` and `extra_requirements` options. But note that this mechanism is deprecated.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--black-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BLACK_INTERPRETER_CONSTRAINTS'
  toml_repr={`[black]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `requirements`

<Option
  cli_repr={`--black-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BLACK_REQUIREMENTS'
  toml_repr={`[black]
requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

If install_from_resolve is specified, install these requirements, at the versions provided by the specified resolve&#x27;s lockfile.

Values can be pip-style requirements (e.g., `tool` or `tool==1.2.3` or `tool>=1.2.3`), or addresses of python_requirement targets (or targets that generate or depend on python_requirement targets).

The lockfile will be validated against the requirements - if a lockfile doesn&#x27;t provide the requirement (at a suitable version, if the requirement specifies version constraints) Pants will error.

If unspecified, install the entire lockfile.

</Option>

## Deprecated options

### `export`

<Option
  cli_repr={`--[no-]black-export`}
  env_repr='PANTS_BLACK_EXPORT'
  toml_repr={`[black]
export = <bool>`}
  default_repr={`True`}
  removal_version='2.18.0.dev0'
  removal_hint={'Use the export goal\'s --resolve option to select tools to export, instead of using this option to exempt a tool from export-by-default.'}
>

If true, export a virtual environment with Black when running `pants export`.

This can be useful, for example, with IDE integrations to point your editor to the tool&#x27;s binary.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--black-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BLACK_EXTRA_REQUIREMENTS'
  toml_repr={`[black]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "typing-extensions>=3.10.0.0; python_version < \"3.10\""\n]`}
  removal_version='2.18.0.dev1'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.'}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `lockfile`

<Option
  cli_repr={`--black-lockfile=<str>`}
  env_repr='PANTS_BLACK_LOCKFILE'
  toml_repr={`[black]
lockfile = <str>`}
  default_repr={`<default>`}
  removal_version='2.18.0.dev0'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.<br /><br />1. If you have an existing resolve that includes the requirements for this tool,<br />    you can set `[black].install_from_resolve = "<resolve name>".<br />    This may be the case if the tool also provides a runtime library, and you want<br />    to specify the version in just one place.<br />2. If not, you can set up a new resolve as described at the link above.<br /><br />Either way, the resolve you choose should provide the requirements currently set by the `version` and `extra-requirements` options for this tool, which you can see by running `pants help-advanced black`.'}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.16.1rc4/src/python/pants/backend/python/lint/black/black.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `pants generate-lockfiles --resolve=black`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `version`

<Option
  cli_repr={`--black-version=<str>`}
  env_repr='PANTS_BLACK_VERSION'
  toml_repr={`[black]
version = <str>`}
  default_repr={`black>=22.6.0,<24`}
  removal_version='2.18.0.dev1'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.'}
>

Requirement string for the tool.

</Option>

## Related subsystems

None

</span>
